SET (TARGET_NAME "rfx_decode")
AUX_SOURCE_DIRECTORY (. SRC_FILES)
SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output)
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 ")
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ")
#SET (FREERDP_LIB ${CMAKE_SOURCE_DIR}/3rdparty/freerdp/lib)
SET(ENV{PKG_CONFIG_PATH} /usr/local/lib/pkgconfig)
find_package(PkgConfig)
pkg_search_module(FREERDP3 freerdp3)
pkg_search_module(WINPR3 winpr3)
INCLUDE_DIRECTORIES (${FREERDP3_INCLUDE_DIRS} ${WINPR3_INCLUDE_DIRS})
#LINK_DIRECTORIES (${FREERDP_LIB})
ADD_EXECUTABLE(${TARGET_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${FREERDP3_LIBRARIES} ${WINPR3_LIBRARIES} )
INSTALL(TARGETS ${TARGET_NAME} RUNTIME DESTINATION bin) 
